refactor: used eslint style airbnb and prettier
